--- a/Depo/Depo/Presentation/UserStories/Settings/Settings/Header/SettingFooterView.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/Settings/Header/SettingFooterView.xib
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="iN0-l3-epB" customClass="SettingFooterView" customModule="LifeTech_lifedrive" customModuleProvider="target">
+        <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="iN0-l3-epB" customClass="SettingFooterView" customModule="Billo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="110"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PbB-FE-kg4">
                     <rect key="frame" x="0.0" y="0.0" width="414" height="110"/>
                     <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oX3-1e-3qp" customClass="ButtonWithGrayCorner" customModule="LifeTech_lifedrive" customModuleProvider="target">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oX3-1e-3qp" customClass="ButtonWithGrayCorner" customModule="Billo" customModuleProvider="target">
                             <rect key="frame" x="118.5" y="20" width="177" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="6F5-kE-EhJ"/>
@@ -34,10 +35,9 @@
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
                         <constraint firstItem="oX3-1e-3qp" firstAttribute="top" secondItem="PbB-FE-kg4" secondAttribute="top" constant="20" id="1cz-5t-hxz"/>
-                        <constraint firstItem="Zll-f0-LSI" firstAttribute="top" secondItem="oX3-1e-3qp" secondAttribute="bottom" constant="20" id="Ivs-mh-USI"/>
                         <constraint firstItem="oX3-1e-3qp" firstAttribute="centerX" secondItem="PbB-FE-kg4" secondAttribute="centerX" id="Nbp-qb-8ZB"/>
                         <constraint firstItem="Zll-f0-LSI" firstAttribute="centerX" secondItem="PbB-FE-kg4" secondAttribute="centerX" id="Tph-ED-USb"/>
                         <constraint firstAttribute="bottom" secondItem="Zll-f0-LSI" secondAttribute="bottom" constant="20" id="suF-Qo-1HD"/>
@@ -59,4 +59,9 @@
             <point key="canvasLocation" x="139" y="143"/>
         </view>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
